src/test/resources/plang-strict/parse-error/001_empty.plang
**#Program with no statements should give syntax error
**FirstErrorLoc:4,1
program empty
program_vége
